--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
